fixed media quries acress 15 different divices. text is not overlaping now

--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,23 @@ footer a {
 .Jumbotron-text-health-page{
     color: white;
 }
+#cover-text-health-page{
+    color: white;
+    font-family: 'Alegreya SC', serif;
+    font-style: oblique;
+    font-weight: 500;
+    height: 9.5em;
+    width: 20.5em;
+    letter-spacing: 0.2em;
+    padding: 1.1em 1.1em;
+    text-align: center;
+
+    position: absolute;
+    background-color: rgba(221, 76, 74, 0.658);
+    bottom: 0.9em;
+    right: 0.7em;
+}
+
 
 .img-fluid {
     height: 20em;
@@ -366,11 +383,11 @@ footer a {
 
 /*-----------------------------------------------------------Media quries */
 
-@media (min-width:310px) {
+@media (max-width:360px) {
     #cover-text {
     color: white;
     font-family: 'Alegreya SC', serif;
-    font-style: italic;
+    font-style: oblique;
     font-weight: 300;
     height: 5em;
     width: 19em;
@@ -398,6 +415,7 @@ footer a {
 
     .jumbotron-main-health-page{
     color: white;
+    font-size: 2em;
     font-weight: 400;
     margin-top: 0em;
     }
@@ -405,11 +423,29 @@ footer a {
     .Jumbotron-text-health-page{
     color: white;
     font-weight: 100;
-    font-size: 1.5em;
+    font-size: 1.3em;
+    }
+
+
+    #cover-text-health-page {
+    color: white;
+    font-family: 'Alegreya SC', serif;
+    font-style: italic;
+    font-weight: 300;
+    height: 5em;
+    width: 19em;
+    padding: 0.2em 0.2em;
+    text-align: center;
+    overflow: hidden;
+
+    position: absolute;
+    background-color: rgba(221, 76, 74, 0.658);
+    bottom: 0.9em;
+    right: 0.4em;
     }
 
     .socialmedia-icons a{
-    font-size: 2.3em;
+    font-size: 2em;
     word-spacing: 0.7em;
     text-decoration: none;
     }
@@ -430,7 +466,7 @@ footer a {
 }
 
 
-@media (max-width:450px) {
+@media (min-width:450px) {
     .socialmedia-icons a{
     font-size: 2.9em;
     word-spacing: 0.9em;
@@ -438,7 +474,7 @@ footer a {
     }
 }
 
-@media (max-width:858px) {
+@media (max-width:860px) {
     .margin-top-50{
     margin-top: 1em;
     }
